# heliosica

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  COMPLETION.md  COMPLETION_CERTIFICATE.txt  CONTRIBUTING.md  DEPLOY.md  Dockerfile  INSTALL.md  LICENSE  MANIFEST.in  NOTICE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  upload_heliosica.py
data/: README.md
docs/theory/: HELIOSICA_RESEARCH_PAPER.docx
heliosica/: __init__.py
heliosica/cli/: download.py  forecast.py  main.py  monitor.py  serve.py  validate.py
heliosica/data/: __init__.py
heliosica/data/loaders/: __init__.py  dscovr.py  nmdb.py  omni.py  soho.py
heliosica/physics/: dbm.py  forbush.py  gssi.py  kp_predictor.py  magnetopause.py  reconnection.py
heliosica/utils/: __init__.py  coordinates.py  file_utils.py  math_utils.py  time_utils.py
heliosica/visualization/: formatters.py  html_generators.py  styles.py
notebooks/: README.md
output/reports/: .gitkeep
scripts/: backup.sh  deploy.sh  download_validation_data.py  generate_reports.py  health_check.py  init_db.py  run_tests.py  setup_dev.sh
tests/: README.md  __init__.py
tests/unit/: __init__.py  test_dbm.py  test_forbush.py  test_gssi.py  test_kp_predictor.py  test_magnetopause.py  test_reconnection.py
