# HELIOSICA Setup Configuration
# Heliospheric Event and L1 Integrated Observatory for Solar Intelligence and Coronal Activity
# Version: 1.0.0 | DOI: 10.5281/zenodo.19042948

[metadata]
name = heliosica
version = 1.0.0
author = Samir Baladi
author_email = gitdeeper@gmail.com
maintainer = Samir Baladi
maintainer_email = gitdeeper@gmail.com
description = HELIOSICA: Nine Parameters to Decode the Solar Wind and Shield Our Digital World
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gitdeeper9/heliosica
download_url = https://github.com/gitdeeper9/heliosica/archive/v1.0.0.tar.gz
project_urls =
    Documentation = https://heliosica.netlify.app/docs
    Source = https://github.com/gitdeeper9/heliosica
    Bug Reports = https://github.com/gitdeeper9/heliosica/issues
    Discussion = https://github.com/gitdeeper9/heliosica/discussions
    DOI = https://doi.org/10.5281/zenodo.19042948
    Web Dashboard = https://heliosica.netlify.app
license = MIT
license_file = LICENSE
platforms = any
keywords =
    space-weather,
    heliophysics,
    coronal-mass-ejection,
    solar-wind,
    geomagnetic-storm,
    kp-index,
    dst-index,
    drag-based-model,
    magnetopause,
    magnetic-reconnection,
    forbush-decrease,
    real-time-forecasting,
    mhd,
    cmc,
    l1-monitoring,
    dscovr,
    soho,
    python,
    open-source

classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Intended Audience :: Education
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Atmospheric Science
    Topic :: Scientific/Engineering :: Physics
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.9, <3.12
setup_requires =
    setuptools>=61.0
    wheel>=0.38
install_requires =
    numpy>=1.24.0
    scipy>=1.10.0
    pandas>=2.0.0
    xarray>=2023.4.0
    numba>=0.57.0
    matplotlib>=3.7.0
    plotly>=5.14.0
    seaborn>=0.12.0
    h5py>=3.8.0
    netCDF4>=1.6.0
    pyyaml>=6.0
    python-dotenv>=1.0.0
    requests>=2.30.0
    tqdm>=4.65.0
    click>=8.1.0
    joblib>=1.2.0
    scikit-learn>=1.2.0
    statsmodels>=0.14.0
    sunpy>=5.0.0
    drms>=0.7.0
    astropy>=5.0.0
    colorama>=0.4.6

[options.packages.find]
include =
    heliosica
    heliosica.*
exclude =
    tests
    tests.*
    docs
    docs.*
    examples
    examples.*
    notebooks
    notebooks.*

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    pytest-xdist>=3.0.0
    black>=23.0.0
    isort>=5.0.0
    flake8>=6.0.0
    pylint>=2.0.0
    mypy>=1.0.0
    pre-commit>=3.0.0
    ipython>=8.0.0
    jupyter>=1.0.0

docs =
    sphinx>=7.0.0
    sphinx-rtd-theme>=1.2.0
    sphinx-autodoc-typehints>=1.23.0
    sphinx-gallery>=0.13.0
    nbsphinx>=0.9.0
    mkdocs>=1.4.0
    mkdocs-material>=9.0.0
    mkdocstrings[python]>=0.22.0
    pymdown-extensions>=10.0.0

test =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    pytest-xdist>=3.0.0
    hypothesis>=6.0.0

web =
    flask>=2.3.0
    flask-cors>=4.0.0
    dash>=2.9.0
    dash-bootstrap-components>=1.4.0
    gunicorn>=20.1.0

ml =
    tensorflow>=2.13.0
    pytorch>=2.0.0
    xgboost>=1.7.0

all =
    %(dev)s
    %(docs)s
    %(test)s
    %(web)s
    %(ml)s

[options.entry_points]
console_scripts =
    heliosica = heliosica.cli.main:cli
    heliosica-download = heliosica.cli.download:main
    heliosica-process = heliosica.cli.process:main
    heliosica-gssi = heliosica.cli.gssi:main
    heliosica-serve = heliosica.cli.serve:main
    heliosica-diagnostic = heliosica.cli.diagnostic:main
    heliosica-validate = heliosica.cli.validate:main
    heliosica-forecast = heliosica.cli.forecast:main
    heliosica-alert = heliosica.cli.alert:main
    heliosica-dbm = heliosica.cli.dbm:main
    heliosica-kp = heliosica.cli.kp:main
    heliosica-magnetopause = heliosica.cli.magnetopause:main
    heliosica-forbush = heliosica.cli.forbush:main

heliosica.physics =
    dbm = heliosica.physics.dbm:DragBasedModel
    magnetopause = heliosica.physics.magnetopause:MagnetopauseTracker
    reconnection = heliosica.physics.reconnection:ReconnectionElectricField
    kp_predictor = heliosica.physics.kp_predictor:KpPredictor
    forbush = heliosica.physics.forbush:ForbushDecrease
    gssi = heliosica.physics.gssi:GeomagneticStormSeverityIndex

heliosica.data =
    dscovr = heliosica.data.loaders.dscovr:DSCOVRLoader
    soho = heliosica.data.loaders.soho:SOHOLoader
    omni = heliosica.data.loaders.omni:OMNILoader
    nmdb = heliosica.data.loaders.nmdb:NMDBLoader

[flake8]
max-line-length = 100
extend-ignore = E203, W503
exclude = .git,__pycache__,docs,venv,.venv,env,dist,build,notebooks,data

[isort]
profile = black
line_length = 100
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
known_first_party = heliosica
known_third_party =
    numpy,
    scipy,
    pandas,
    xarray,
    matplotlib,
    plotly,
    seaborn,
    sklearn,
    sunpy,
    astropy

[mypy]
python_version = 3.10
warn_return_any = True
ignore_missing_imports = True
follow_imports = silent
exclude = (build|docs|tests|examples|notebooks|data)/

[tool:pytest]
minversion = 7.0
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts =
    -ra
    --verbose
    --cov=heliosica
    --cov-report=term
    --cov-report=html
markers =
    slow: marks tests as slow (>10s)
    integration: marks integration tests
    unit: marks unit tests
    validation: marks validation tests with historical data
    realtime: marks real-time data tests

[coverage:run]
source = heliosica
omit =
    */tests/*
    */docs/*
    */examples/*
    */notebooks/*
    */setup.py

# =============================================================================
# END OF SETUP CONFIGURATION
# =============================================================================
